--- a/yoRadio/platformio.ini
+++ b/yoRadio/platformio.ini
@@ -30,7 +30,7 @@ lib_deps =
 
 platform_packages =
 	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.2
-	platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+	platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#1a029d5 #idf-release/v5.1 d38afc77db
 
 build_flags =
   ${git.version}
