--- a/yoRadio/platformio.ini
+++ b/yoRadio/platformio.ini
@@ -8,7 +8,6 @@ url = !echo "-DYOURL="\\\"$(git config --get remote.origin.url | sed -E 's#git@(
 
 [env]
 #platform = https://github.com/platformio/platform-espressif32.git
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip
 board = esp32dev
 board_build.partitions = min_spiffs.csv
 board_build.filesystem = spiffs
@@ -29,7 +28,6 @@ lib_deps =
   bblanchon/ArduinoJson@^7.0.4
   #https://github.com/me-no-dev/ESPAsyncWebServer#b70d36f
   #https://github.com/mathieucarbou/ESPAsyncWebServer
-  https://github.com/ESP32Async/ESPAsyncWebServer
 
 #platform_packages =
 #	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.4
@@ -41,7 +39,7 @@ build_flags =
   # experimental i2s pdm mode
   #-DI2S_PDM=true
   #only for idf 5?
-  -DI2S_DAC_CHANNEL_BOTH_EN=3
+  #-DI2S_DAC_CHANNEL_BOTH_EN=3
   -DL10N_LANGUAGE=DE
   -DTOUCH_BUTTONS=true
   -DCOLOR_THEME="90,211,231" # blue
@@ -76,15 +74,18 @@ build_flags =
   -Wl,-Map,output.map -ffunction-sections -fdata-sections
 
 [env:esp32]
+platform = https://github.com/platformio/platform-espressif32.git#v6.8.1
+platform_packages =
+  framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.14
 lib_deps =
   ${env.lib_deps}
-
-#platform_packages =
-#  framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.14
+  https://github.com/me-no-dev/ESPAsyncWebServer#b70d36f
 
 [env:esp32s3]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip
 lib_deps =
   ${env.lib_deps}
+  https://github.com/ESP32Async/ESPAsyncWebServer
 
 [env:esp32-2432S028R]
 extends = env:esp32
@@ -366,10 +367,7 @@ board = ESP32-S3-DevKitC-1-N4R8
 
 lib_deps =
   ${env:esp32s3.lib_deps}
-  #moononournation/GFX Library for Arduino@^1.4.7
-  #moononournation/GFX Library for Arduino@^1.5.2
   https://github.com/moononournation/Arduino_GFX#a205402
-  #moononournation/GFX Library for Arduino@^1.6.1
   https://github.com/dasdgw/gt911-arduino
 
 build_unflags = -D ARDUINO_USB_MODE
